# swagger_server/swagger/swagger.yaml
@@ -37,6 +37,45 @@ paths:
         "409":
           description: "already exists"
       x-swagger-router-controller: "swagger_server.controllers.default_controller"
+  /student/:
+    get:
+      summary: "Find student by query"
+      description: "Returns a single student"
+      operationId: "get_student_by_query"
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - name: "student_id"
+        in: "query"
+        description: "ID of student to return"
+        type: "integer"
+        format: "int64"
+      - name: "subject"
+        in: "query"
+        description: "The subject name"
+        required: false
+        type: "string"
+      - name: "first_name"
+        in: "query"
+        description: "The first name"
+        required: false
+        type: "string"
+      - name: "last_name"
+        in: "query"
+        description: "The last name"
+        required: false
+        type: "string"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Student"
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "student not found"
+      x-swagger-router-controller: "swagger_server.controllers.default_controller"
   /student/{student_id}:
     get:
       summary: "Find student by ID"
@@ -103,13 +142,9 @@ definitions:
         type: "string"
       grades:
         type: "object"
-        additionalProperties:
-          type: number
-          format: float
           
     example:
       student_id: 0
       last_name: "last_name"
-      grades:
-        key: 6.0274563
+      grades: "{}"
       first_name: "first_name"
